CAMBIOS EXPERIMENTALES - MEJORA DE CODIGO

--- a/translations/es.json
+++ b/translations/es.json
@@ -82,7 +82,7 @@
   "CaracterísticaLoquios": "Característica de los Loquios (Sangre)",
   "caregiver": "Who takes care of the child?",
   "caseEncounter": "Encuentros de gestión de casos",
-  "caseManagemet": "Gestión de Casos",
+  "caseManagemet": "Seguimiento de Pacientes",
   "caseManager": "Gestor de Casos",
   "category": "Categoría",
   "causeOfDeath": "Causa de Muerte",
