--- a/translations/en.json
+++ b/translations/en.json
@@ -82,6 +82,7 @@
   "CaracterísticaLoquios": "Lochia Characteristics (Blood)",
   "caregiver": "Who takes care of the child?",
   "caseEncounter": "Case Management Encounters",
+  "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
   "caseManagemet": "Case Management",
   "caseManager": "Case Manager",
   "category": "Categoría",
