--- a/translations/es.json
+++ b/translations/es.json
@@ -82,8 +82,9 @@
   "CaracterísticaLoquios": "Característica de los Loquios (Sangre)",
   "caregiver": "Who takes care of the child?",
   "caseEncounter": "Encuentros de gestión de casos",
+  "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
   "caseManagemet": "Seguimiento de Pacientes",
-  "caseManager": "Gestor de Casos",
+  "caseManager": "Gestor del Caso",
   "category": "Categoría",
   "causeOfDeath": "Causa de Muerte",
   "cephaloCaudalNeurologicalEvaluation": "Evaluación Céfalocaudal y Neurológica del Recién Nacido",
@@ -251,7 +252,7 @@
   "fontanelle": "Fontanela",
   "fontanelleOther": "Otros para fontanela",
   "formName": "Nombre del Formulario",
-  "formTitle": "Complete los detalles del formulario",
+  "formTitle": "Complete los datos del Formulario",
   "frecuenciaCardiaca": "Frecuencia Cardíaca",
   "frecuenciaCardiacaFetal": "Frecuencia cardiaca fetal (por min.)",
   "frecuenciaRespiratoria": "Frecuencia Respiratoria (rpm)",
@@ -327,7 +328,7 @@
   "male": "Hombre",
   "malnutrition": "Severe visible malnutrition",
   "managePeers": "Gestionar Pares",
-  "manager": "Gestor de Casos",
+  "manager": "Gestor del Caso",
   "manageVaccinationSchedule": "Gestionar Agenda de Vacunación",
   "maritalStatus": "Estado Civil",
   "married": "Married",
