actualizar traducción de "Enter value" a "Ingrese valor"

--- a/translations/es.json
+++ b/translations/es.json
@@ -203,7 +203,7 @@
   "enrolled": "Inscrito",
   "enterForm": "Ingresar Formulario",
   "enterText": "Ingrese texto",
-  "enterValue": "Enter value",
+  "enterValue": "Ingrese valor",
   "epicrisis": "Epicrisis",
   "error": "Error",
   "errorFetchingbedInformation": "Error al obtener información de camas",
