--- a/translations/en.json
+++ b/translations/en.json
@@ -10,6 +10,7 @@
   "addCase": "Add Case",
   "addCredControl": "Add Wellchild Care Control",
   "additionalHealthServices": "Additional Health Services",
+  "additionalNotes": "Any additional notes",
   "addNewVaccine": "Add New Vaccine",
   "addPeer": "Add Peer",
   "addPNSContact": "Add PNS Contact",
@@ -140,6 +141,7 @@
   "dateofend": "End Date",
   "dateofstart": "Start Date",
   "dateOfSurgery": "Date of Surgery",
+  "datePlaceholder": "mm/dd/yyyy",
   "datetime": "Date and Time",
   "datosAntropometricos": "Anthropometric Data",
   "days": "días",
@@ -503,6 +505,7 @@
   "relationshipConfirmationText": "This will end the relationship. Are you sure you want to continue?",
   "relationshipError": "Relationship Error",
   "relationshipErrorMessage": "Request Failed",
+  "relationshipInfo": "Relationship Info",
   "relationshipStatus": "Relationship Status",
   "relationshipType": "Relationship Type",
   "relationToPatient": "Relationship to Patient",
@@ -517,6 +520,7 @@
   "respiratoryRateAbbreviated": "Resp. Rate",
   "riskFactors": "Risk Factors",
   "RlshipError": "Request failed...",
+  "RlshipErrorSubtitle": "Request Failed.......",
   "rubeola": "Rubella",
   "saturacionOxigeno": "Oxygen Saturation (O₂ %)",
   "save": "Save",
@@ -540,6 +544,8 @@
   "seizures": "Seizures",
   "selectConcept": "Select a Concept",
   "selectDateAndTime": "Select a date and time for the appointment",
+  "selectManager": "Select Case Manager",
+  "selectRelationship": "Select Relationship",
   "selectSchema": "Select a Schema",
   "selectVaccine": "Select a Vaccine",
   "selectValue": "Seleccione un valor",
