--- a/translations/es.json
+++ b/translations/es.json
@@ -10,6 +10,7 @@
   "addCase": "Agregar caso",
   "addCredControl": "Agregar Control CRED",
   "additionalHealthServices": "Prestaciones Adicionales de Salud",
+  "additionalNotes": "Notas Adicionales",
   "addNewVaccine": "Agregar nueva vacuna",
   "addPeer": "Agregar Par",
   "addPNSContact": "Agregar relación",
@@ -140,6 +141,7 @@
   "dateofend": "Fecha de Finalización",
   "dateofstart": "Fecha de Inicio",
   "dateOfSurgery": "Fecha de Cirugía",
+  "datePlaceholder": "dd/mm/yyyy",
   "datetime": "Fecha y Hora",
   "datosAntropometricos": "Datos Antropométricos",
   "days": "días",
@@ -502,6 +504,7 @@
   "relationshipConfirmationText": "Esto terminará la relación. ¿Está seguro de continuar?",
   "relationshipError": "Error de Relación",
   "relationshipErrorMessage": "Solicitud Fallida",
+  "relationshipInfo": "Relationship Info",
   "relationshipStatus": "Relationship Status",
   "relationshipType": "Tipo de Relación",
   "relationToPatient": "Relación con el paciente",
@@ -516,6 +519,7 @@
   "respiratoryRateAbbreviated": "F. Resp.",
   "riskFactors": "Risk Factors",
   "RlshipError": "Falla en la solicitud...",
+  "RlshipErrorSubtitle": "Request Failed.......",
   "rubeola": "Rubéola",
   "saturacionOxigeno": "Saturación O₂ (%)",
   "save": "Guardar",
@@ -539,6 +543,8 @@
   "seizures": "Seizures",
   "selectConcept": "Seleccionar un Concepto",
   "selectDateAndTime": "Selecciona una fecha y hora para la cita",
+  "selectManager": "Select Case Manager",
+  "selectRelationship": "Select Relationship",
   "selectSchema": "Seleccionar un Esquema",
   "selectVaccine": "Seleccionar una Vacuna",
   "selectValue": "Seleccione un valor",
