update family and prenatal antecedents

--- a/translations/en.json
+++ b/translations/en.json
@@ -473,7 +473,7 @@
   "preeclampsia": "Preeclampsia",
   "preferedPNSAproach": "Preferred PNS Approach",
   "pregnancyOutcome": "Pregnancy Outcome",
-  "prenatalAntecedents": "Prenatal Antecedents",
+  "prenatalAntecedents": "Antecentes Natales, Labor y Parto",
   "prenatalVisitLocation": "Lugar de atenciones prenatales",
   "prenatalVisits": "N° de atenciones prenatales",
   "presentación": "Presentation (C/P/NA)",
