--- a/translations/es.json
+++ b/translations/es.json
@@ -367,7 +367,7 @@
   "neonatalCounselery": "Consejeria",
   "NeonatalMonitoring": "Monitoreo de Funciones Vitales",
   "neonatalProblems": "Problemas Neonatales",
-  "neonatalSummary": "Resumen Neonatal",
+  "neonatalSummary": "Antecedentes Natales, Labor y Parto",
   "neonatalvitalsRecorded": "Balance del Recién Nacido Registrado",
   "neurologicalEvaluation": "Valoración Neurológica",
   "neurologicalEvaluationOther": "Otros para valoración neurológica",
@@ -472,7 +472,7 @@
   "preeclampsia": "Preeclampsia",
   "preferedPNSAproach": "Enfoque PNS Preferido",
   "pregnancyOutcome": "Pregnancy Outcome",
-  "prenatalAntecedents": "Prenatal Antecedents",
+  "prenatalAntecedents": "Antecedentes Prenatales",
   "prenatalVisitLocation": "Lugar de atenciones prenatales",
   "prenatalVisits": "N° de atenciones prenatales",
   "presentación": "Presentación (C/P/NA)",
