refactoring (prettier + extract translations)

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,10 +1,12 @@
 {
+  "Abdomen": "Abdomen",
   "abdomenCharacteristics": "Características del Abdomen",
   "abnormalValue": "Abnormal Value",
   "abortion": "Abortion",
   "accidentOrTrauma": "Accident or Trauma",
   "action": "Action",
   "actions": "Actions",
+  "active": "Active",
   "activeCases": "Active Cases",
   "add": "Add",
   "addCase": "Add Case",
@@ -34,6 +36,7 @@
   "alturaUterina": "Uterine Height (cm)",
   "analPermeability": "Permeabilidad Anal",
   "analPermeabilityOther": "Otros para permeabilidad",
+  "Anamnesis": "Anamnesis",
   "ancVisitNumber": "Prenatal Visit Number",
   "Antecedente": "Medical History",
   "antecedentes": "Medical History",
@@ -53,6 +56,7 @@
   "appointmentType": "Appointment Type",
   "asthma": "Asthma",
   "AtencionesPrenatales": "Prenatal Care",
+  "AtencionesPuerperio": "Atenciones Puerperio",
   "atencionInmediata": "Immediate Newborn Care",
   "attendedBy": "Attended By",
   "babyGivenVitaminD": "Vitamin D Administered to Baby",
@@ -80,6 +84,7 @@
   "cancelAppointmentModalConfirmationText": "Are you sure you want to cancel this appointment?",
   "cannotDrink": "Cannot drink or breastfeed",
   "Captada": "Captured",
+  "característicaLoquios": "Característica Loquios",
   "CaracterísticaLoquios": "Lochia Characteristics (Blood)",
   "caregiver": "Who takes care of the child?",
   "caseEncounter": "Case Management Encounters",
@@ -91,6 +96,7 @@
   "cephaloCaudalNeurologicalEvaluation": "Evaluación Céfalocaudal y Neurológica del Recién Nacido",
   "cervicalDilation": "Cervical Dilation (cm)",
   "chartView": "Chart View",
+  "checkFilters": "Check the filters above",
   "checkForValidity": "Some of the entered values are invalid",
   "chestCircumference": "Chest Circumference",
   "childImmunizationSchedule": "Esquema de Inmunización Infantil",
@@ -100,6 +106,8 @@
   "clean": "Clear",
   "clientEligibility": "Eligibility",
   "clinicalEncounter": "Clinical Encounter",
+  "clinicalStatus": "Clinical status",
+  "clinicalStatusRequired": "A clinical status is required",
   "clinicalViews": "Clinical Views",
   "cohabiting": "Cohabiting",
   "completed": "Completed",
@@ -107,7 +115,14 @@
   "completedDocumentations": "Completed Documentation",
   "comprehensiveCareFollowUp": "Comprehensive Care Follow-Up",
   "concept": "Concept",
+  "condition": "Condition",
   "conditional": "Conditional",
+  "conditionDeleted": "Condition deleted",
+  "conditionNowVisible": "It is now visible on the Conditions page",
+  "conditionRequired": "A condition is required",
+  "conditions": "Conditions",
+  "conditionSaved": "Condition saved",
+  "conditionUpdated": "Condition updated",
   "confirmAppointment": "Confirm Appointment",
   "confirmationQuestion": "Are you sure you want to delete the relationship?",
   "consejeriaLactancia": "Breastfeeding Counseling",
@@ -120,6 +135,8 @@
   "contactCreated": "Contact Created",
   "contacted": "Contacted",
   "contactList": "Contact List",
+  "Controles": "Controles",
+  "controlPuerperio": "Control Puerperio",
   "cordClamping": "Clampeo del cordón",
   "createPatient": "Create Patient",
   "credControl": "Wellchild Care Control",
@@ -139,6 +156,7 @@
   "dateOfBirthPlaceholder": "mm/dd/yyyy",
   "dateOfDelivery": "Date of Delivery",
   "dateofend": "End Date",
+  "dateOfOnset": "Date of onset",
   "dateofstart": "Start Date",
   "dateOfSurgery": "Date of Surgery",
   "datePlaceholder": "mm/dd/yyyy",
@@ -148,10 +166,14 @@
   "dead": "Deceased",
   "defaulterTracing": "Defaulter Tracing",
   "delete": "Delete",
+  "deleteCondition": "Delete condition",
+  "deleteModalConfirmationText": "Are you sure you want to delete this condition?",
   "deleteRelationship": "Delete Relationship",
+  "deleting": "Deleting",
   "deliveryCondition": "Condición del parto",
   "deliveryDate": "Delivery Date",
   "deliveryLocation": "Lugar del parto",
+  "deliveryOrAbortion": "Parto o aborto",
   "deliveryOutcome": "Delivery Outcome",
   "demographics": "Demographics",
   "department": "Department",
@@ -186,6 +208,7 @@
   "edemaGestacional": "Edema gestacional",
   "edit": "Edit",
   "editAppointment": "Edit Appointment",
+  "editCondition": "Edit a Condition",
   "editDose": "Edit Dose Details",
   "editEncounter": "Edit Encounter",
   "editForm": "Edit Form",
@@ -204,22 +227,32 @@
   "endDate": "End Date",
   "endRelationship": "End Relationship",
   "enrolled": "Enrolled",
+  "enterCondition": "Enter condition",
   "enterForm": "Enter Form",
   "enterText": "Ingrese texto",
   "enterValue": "Enter value",
   "epicrisis": "Epicrisis",
   "error": "Error",
+  "errorCreatingCondition": "Error creating condition",
+  "errorDeletingCondition": "Error deleting condition",
   "errorFetchingbedInformation": "Error fetching bed information",
   "errorLoadingConcepts": "Error loading vaccination concepts",
+  "errorLoadingData": "Error loading data",
   "errorLoadingPatient": "Error loading patient data.",
+  "errorUpdatingCondition": "Error updating condition",
   "esophagus": "Permeabilidad Esófago",
+  "EstadoAdministraciónVitaminaA": "Estado de administración de vitamina A",
+  "EstadoGeneral": "Estado General",
   "EV": {
     " Rec / 24h": ""
   },
   "evaluacionInmediata": "Newborn Assessment",
   "evaluationOrdersNotes": "Evaluation, Orders, and Exams",
+  "evolucionYMonitorizacion": "Evolución Y Monitorización",
   "ExamenClínico": "Clinical Exam",
   "Examendecuellouterino": "Cervical Exam",
+  "examenFísicoTórax": "Examen Físico de Tórax",
+  "ExamenGenitalesExternos": "Examen Genitales Externos",
   "ExamenMamas": "Breast Exam",
   "ExamenOdontológico": "Dental Exam",
   "Examenpélvico": "Pelvic Exam",
@@ -247,6 +280,7 @@
   "finalDiagnosis": "Final Diagnosis",
   "finalDischargeDiagnosis": "Final Discharge Diagnosis",
   "finalOutcome": "Final Outcome",
+  "FirmaYSello": "Firma y Sello",
   "firstName": "First Name",
   "firstNamePlaceholder": "First name",
   "fluidBalance": "Fluid Balance",
@@ -257,6 +291,7 @@
   "formName": "Form Name",
   "formTitle": "Complete the form details",
   "frecuenciaCardiaca": "Frecuencia Cardíaca",
+  "frecuenciaCardíaca": "Frecuencia Cardíaca",
   "frecuenciaCardiacaFetal": "Fetal Heart Rate (per min.)",
   "frecuenciaRespiratoria": "Respiratory Rate (rpm)",
   "fromAge": "From Age",
@@ -270,14 +305,17 @@
   "gestationalDiabetes": "Gestational Diabetes",
   "gestationalSize": "Gestational Size",
   "GraficasObstétricas": "Obstetric Charts",
+  "gravidez": "Gravidez",
   "growthChart": "Growth Chart",
   "growthCondition": "Growth Condition",
   "headCircumference": "Head Circumference",
   "heartRate": "Frecuencia cardíaca",
   "height": "Height",
   "hepatitisB": "Hepatitis B",
+  "heridaOperatoria": "Herida Operatoria",
   "HeridaOperatoria": "Surgical Wound",
   "hip": "Cadera",
+  "historiaClinicaObstetricaParto": "Historia Clínica Obstétrica de Parto",
   "hivStatus": "HIV Status",
   "hivTestResults": "HIV Test Results",
   "Hora de ingreso": "Admission Time",
@@ -297,6 +335,7 @@
   "immunizationPlan": "Vaccination Schedule",
   "immunizationPlanBuilder": "Vaccination Schedule Management",
   "immunizationTabs": "Lista de pestañas de inmunización",
+  "inactive": "Inactive",
   "inactiveCases": "Inactive Cases",
   "indicacionAcidoFolico": "Indicación Acido Fólico",
   "indicacionCalcio": "Indicación Calcio",
@@ -306,6 +345,7 @@
   "inPatientView": "Inpatient View",
   "inPatientVisitMessage": "Inpatient encounter found for the current visit {{visitType}}",
   "interpretation": "Interpretation",
+  "involuciónUterina": "Involución Uterina",
   "InvoluciónUterina": "Uterine Involution",
   "ipvOutcome": "IPV Outcome",
   "ipvOutCome": "IPV Outcome",
@@ -385,6 +425,7 @@
   "noActiveCasesToDisplay": "No active cases to display.",
   "noBreastfeeding": "Does not want to breastfeed or suck",
   "noChartDataAvailable": "No chart data available.",
+  "noConditionsToDisplay": "No conditions to display",
   "noContactToDisplay": "No contact data to display.",
   "noCurrentAppointments": "No current appointments scheduled for today for this patient.",
   "noData": "No data available",
@@ -399,6 +440,7 @@
   "noObservationsFound": "No observations found",
   "noPastAppointments": "No past appointments to display for this patient.",
   "nopeers": "No peers to display for this peer educator.",
+  "noResultsFor": "No results for",
   "noSchemas": "No schemas available",
   "nose": "Nariz",
   "noSearchItems": "No vaccines found",
@@ -407,16 +449,19 @@
   "notes": "Notes",
   "noUpcomingAppointments": "No upcoming appointments found",
   "noUpcomingAppointmentsForPatient": "No upcoming appointments for this patient",
+  "Nueva Atención Postnatal": "Nueva Atención Postnatal",
   "Nueva Atención Prenatal": "New Prenatal Care",
   "numberOfPregnancies": "N° de embarazo",
   "numeroDeposiciones": "Number of Stools",
   "numeroMicciones": "Number of Urinations",
   "numeroVomito": "Number of Vomits",
   "nutritionalStatus": "Nutritional Status",
+  "observación": "Observación",
   "observation": "Observación",
   "observations": "Observations",
   "of": "of",
   "onDate": "On Date",
+  "onsetDate": "Onset date",
   "operatingDoctor": "Operating Physician",
   "optional": "Optional",
   "orientacion": "Orientación y consejería",
@@ -431,12 +476,19 @@
   "over90Days": "Mayor de 90 días",
   "oxygenSaturation": "Oxygen Saturation",
   "pageNumber": "Page number",
+  "paginationPageText_one": "of {{count}} pages",
+  "paginationPageText_other": "of {{count}} pages",
   "paleness": "Severe palmar paleness",
   "parentInformation": "Información a los padres",
   "partnerStatus": "Partner's HIV Status",
+  "parto": "Parto",
+  "partoAborto": "Abortos",
+  "partoAlTermino": "Partos a término",
   "partograph": "Partograph",
   "partographData": "Vital Components",
   "partographyDisplay": "Displayed Partograph",
+  "partoNacidoVivo": "Nacidos vivos",
+  "partoPrematuro": "Partos prematuros",
   "past": "Past",
   "patient": "Patient",
   "patientFamilyTable": "Patient family table",
@@ -454,12 +506,15 @@
   "perinatalDataSaveError": "Error saving perinatal data",
   "perinatalRegister": "Perinatal Maternal Carnet",
   "Peso": "Weight (Kg)",
+  "pesoCorporal": "Peso Corporal (kg)",
   "pesoMadre": "Mother's Weight (kg)",
   "phoneNumber": "Phone Number",
   "phoneNumberPlaceholder": "Phone number",
   "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise caused you physical harm?",
   "physicalExam": "Physical Examination",
+  "PielYMucosas": "Piel y Mucosas",
   "placeOfDelivery": "Place of Delivery",
+  "Plan de Parto (Control/Visita/No se hizo/NA)": "Plan de Parto (Control/Visita/No se hizo/NA)",
   "planParto": "Plan de Parto",
   "pleaseFillField": "Please fill in at least one field",
   "pnsAproach": "PNS Approach",
@@ -478,7 +533,9 @@
   "prenatalVisits": "N° de atenciones prenatales",
   "presentación": "Presentation (C/P/NA)",
   "presionDiastolica": "Presión diastólica",
+  "presiónDiastólica": "Presión diastólica",
   "presionSistolica": "Systolic Pressure (mmHg)",
+  "presiónSistólica": "Presión sistólica",
   "pretermLabor": "Preterm Labor",
   "prev": "Previous",
   "previousMonth": "Previous Month",
@@ -489,8 +546,10 @@
   "proteinuriaGestacional": "Proteinuria gestacional",
   "provider": "Provider",
   "proximaCita": "Próxima cita",
+  "ProximaCita": "Próxima cita",
   "psychomotorDevelopment": "Psychomotor Development",
   "Puerperio": "Puerperium",
+  "puerperioInmediato": "Puerperio Inmediato",
   "PuerperioInmediato": "Immediate Puerperium",
   "recommendedProcedure": "Recommended Procedure",
   "recordLabourDetails": "Record Labor Details",
@@ -518,28 +577,34 @@
   "respiratoryEffort": "Esfuerzo respiratorio",
   "respiratoryRate": "Respiratory Rate",
   "respiratoryRateAbbreviated": "Resp. Rate",
+  "resumenPartoPostparto": "Resumen de Parto y Postparto",
   "riskFactors": "Risk Factors",
   "RlshipError": "Request failed...",
   "RlshipErrorSubtitle": "Request Failed.......",
   "rubeola": "Rubella",
   "saturacionOxigeno": "Oxygen Saturation (O₂ %)",
   "save": "Save",
+  "saveAndClose": "Save & close",
   "savedRelationship": "Relationship successfully ended",
   "savedRlship": "Relationship saved successfully",
   "saveError": "Error saving consultation",
   "saveReminder": "Remember to save your changes",
   "saveRlship": "Save Relationship",
   "saveSchema": "Save Schema",
+  "saving": "Saving",
   "scheduleVaccination": "Schedule Vaccination Appointment",
   "schemaBuilder": "Vaccination Schema Builder",
   "searchConcepts": "Search Concepts",
+  "searchConditions": "Search conditions",
   "searchError": "An error occurred while searching.",
   "searchHelper": "Search and select a vaccine to add",
+  "searching": "Searching",
   "searchPatient": "Search patient",
   "searchSchemas": "Search Schemas",
   "searchVaccination": "Search Vaccination",
   "searchVaccine": "Search Vaccine",
   "searchVaccines": "Search Vaccines",
+  "seeAll": "See all",
   "SegundaDosisAntitetanica": "2nd dose of tetanus vaccine",
   "seizures": "Seizures",
   "selectConcept": "Select a Concept",
@@ -552,6 +617,8 @@
   "service": "Service",
   "sex": "Sex",
   "sexualAssault": "3. Has he/she ever forced you to do something sexual that made you feel uncomfortable?",
+  "show": "Show",
+  "SignosYsíntomasPrincipales": "Signos y síntomas principales",
   "silvermanScore": "Puntuación de Silverman",
   "sinAtenciones": "Prenatal Care",
   "single": "Single",
