--- a/translations/es.json
+++ b/translations/es.json
@@ -1,10 +1,12 @@
 {
+  "Abdomen": "Abdomen",
   "abdomenCharacteristics": "Características del Abdomen",
   "abnormalValue": "Valor anormal",
   "abortion": "Abortion",
   "accidentOrTrauma": "Accidente o Trauma",
   "action": "Acción",
   "actions": "Acciones",
+  "active": "Active",
   "activeCases": "Casos activos",
   "add": "Agregar",
   "addCase": "Agregar caso",
@@ -34,6 +36,7 @@
   "alturaUterina": "Altura Uterina (cm)",
   "analPermeability": "Permeabilidad Anal",
   "analPermeabilityOther": "Otros para permeabilidad",
+  "Anamnesis": "Anamnesis",
   "ancVisitNumber": "Número de Visita de Control Prenatal",
   "Antecedente": "Antecedente",
   "antecedentes": "antecedentes",
@@ -53,6 +56,7 @@
   "appointmentType": "Tipo de cita",
   "asthma": "Asthma",
   "AtencionesPrenatales": "Atenciones Prenatales",
+  "AtencionesPuerperio": "Atenciones Puerperio",
   "atencionInmediata": "Atención Inmediata",
   "attendedBy": "Attended By",
   "babyGivenVitaminD": "Vitamina D Administrada al Bebé",
@@ -80,6 +84,7 @@
   "cancelAppointmentModalConfirmationText": "¿Está seguro de que desea cancelar esta cita?",
   "cannotDrink": "Cannot drink or breastfeed",
   "Captada": "Captada",
+  "característicaLoquios": "Característica Loquios",
   "CaracterísticaLoquios": "Característica de los Loquios (Sangre)",
   "caregiver": "Who takes care of the child?",
   "caseEncounter": "Encuentros de gestión de casos",
@@ -91,6 +96,7 @@
   "cephaloCaudalNeurologicalEvaluation": "Evaluación Céfalocaudal y Neurológica del Recién Nacido",
   "cervicalDilation": "Dilatación Cervical (cm)",
   "chartView": "Vista Gráfica",
+  "checkFilters": "Check the filters above",
   "checkForValidity": "Algunos valores ingresados no son válidos",
   "chestCircumference": "Circunferencia Torácica",
   "childImmunizationSchedule": "Esquema de Inmunización Infantil",
@@ -100,6 +106,8 @@
   "clean": "Limpiar",
   "clientEligibility": "Elegibilidad",
   "clinicalEncounter": "Encuentro Clínico",
+  "clinicalStatus": "Clinical status",
+  "clinicalStatusRequired": "A clinical status is required",
   "clinicalViews": "Vistas Clínicas",
   "cohabiting": "Cohabiting",
   "completed": "Completado",
@@ -107,7 +115,14 @@
   "completedDocumentations": "Documentación Completada",
   "comprehensiveCareFollowUp": "Seguimiento de Atención Integral",
   "concept": "Concepto",
+  "condition": "Condition",
   "conditional": "Condicional",
+  "conditionDeleted": "Condition deleted",
+  "conditionNowVisible": "It is now visible on the Conditions page",
+  "conditionRequired": "A condition is required",
+  "conditions": "Conditions",
+  "conditionSaved": "Condition saved",
+  "conditionUpdated": "Condition updated",
   "confirmAppointment": "Confirmar Cita",
   "confirmationQuestion": "¿Está seguro de que desea eliminar la relación?",
   "consejeriaLactancia": "Consejería Lactancia Materna",
@@ -120,6 +135,8 @@
   "contactCreated": "Contacto Creado",
   "contacted": "Contactado",
   "contactList": "Lista de Contactos",
+  "Controles": "Controles",
+  "controlPuerperio": "Control Puerperio",
   "cordClamping": "Clampeo del cordón",
   "createPatient": "Crear Paciente",
   "credControl": "Control CRED",
@@ -139,6 +156,7 @@
   "dateOfBirthPlaceholder": "dd/mm/yyyy",
   "dateOfDelivery": "Fecha de Parto",
   "dateofend": "Fecha de Finalización",
+  "dateOfOnset": "Date of onset",
   "dateofstart": "Fecha de Inicio",
   "dateOfSurgery": "Fecha de Cirugía",
   "datePlaceholder": "dd/mm/yyyy",
@@ -148,10 +166,14 @@
   "dead": "Fallecido",
   "defaulterTracing": "Seguimiento de Incumplidores",
   "delete": "Eliminar",
+  "deleteCondition": "Delete condition",
+  "deleteModalConfirmationText": "Are you sure you want to delete this condition?",
   "deleteRelationship": "Eliminar Relación",
+  "deleting": "Deleting",
   "deliveryCondition": "Condición del parto",
   "deliveryDate": "Fecha de Parto",
   "deliveryLocation": "Lugar del parto",
+  "deliveryOrAbortion": "Parto o aborto",
   "deliveryOutcome": "Resultado del Parto",
   "demographics": "Datos Demográficos",
   "department": "Departamento",
@@ -185,6 +207,7 @@
   "edemaGestacional": "Edema gestacional",
   "edit": "Editar",
   "editAppointment": "Editar una Cita",
+  "editCondition": "Edit a Condition",
   "editDose": "Editar Detalles de la Dosis",
   "editEncounter": "Editar Encuentro",
   "editForm": "Editar Formulario",
@@ -203,22 +226,32 @@
   "endDate": "Fecha Final",
   "endRelationship": "Terminar Relación",
   "enrolled": "Inscrito",
+  "enterCondition": "Enter condition",
   "enterForm": "Ingresar Formulario",
   "enterText": "Ingrese texto",
   "enterValue": "Ingrese valor",
   "epicrisis": "Epicrisis",
   "error": "Error",
+  "errorCreatingCondition": "Error creating condition",
+  "errorDeletingCondition": "Error deleting condition",
   "errorFetchingbedInformation": "Error al obtener información de camas",
   "errorLoadingConcepts": "Error al cargar los conceptos de vacunación",
+  "errorLoadingData": "Error loading data",
   "errorLoadingPatient": "Error al cargar los datos del paciente.",
+  "errorUpdatingCondition": "Error updating condition",
   "esophagus": "Permeabilidad Esófago",
+  "EstadoAdministraciónVitaminaA": "Estado de administración de vitamina A",
+  "EstadoGeneral": "Estado General",
   "EV": {
     " Rec / 24h": "Rec / 24h"
   },
   "evaluacionInmediata": "Evaluación del Recién Nacido",
   "evaluationOrdersNotes": "Valoración, Órdenes y Exámenes",
+  "evolucionYMonitorizacion": "Evolución Y Monitorización",
   "ExamenClínico": "Examen clínico",
   "Examendecuellouterino": "Examen de cuello uterino",
+  "examenFísicoTórax": "Examen Físico de Tórax",
+  "ExamenGenitalesExternos": "Examen Genitales Externos",
   "ExamenMamas": "Examen de mamas",
   "ExamenOdontológico": "Examen odontológico",
   "Examenpélvico": "Examen pélvico",
@@ -246,6 +279,7 @@
   "finalDiagnosis": "Diagnóstico Final",
   "finalDischargeDiagnosis": "Diagnóstico Final al Alta",
   "finalOutcome": "Resultado Final",
+  "FirmaYSello": "Firma y Sello",
   "firstName": "Nombre",
   "firstNamePlaceholder": "Primer Nombre",
   "fluidBalance": "Balance de Líquidos",
@@ -256,6 +290,7 @@
   "formName": "Nombre del Formulario",
   "formTitle": "Complete los datos del Formulario",
   "frecuenciaCardiaca": "Frecuencia Cardíaca",
+  "frecuenciaCardíaca": "Frecuencia Cardíaca",
   "frecuenciaCardiacaFetal": "Frecuencia cardiaca fetal (por min.)",
   "frecuenciaRespiratoria": "Frecuencia Respiratoria (rpm)",
   "fromAge": "Desde Edad",
@@ -269,14 +304,17 @@
   "gestationalDiabetes": "Gestational Diabetes",
   "gestationalSize": "Tamaño Gestacional",
   "GraficasObstétricas": "Graficas Obstétricas",
+  "gravidez": "Gravidez",
   "growthChart": "Gráfico de Crecimiento",
   "growthCondition": "Growth Condition",
   "headCircumference": "Circunferencia de la cabeza",
   "heartRate": "Frecuencia cardíaca",
   "height": "Altura",
   "hepatitisB": "Hepatitis B",
+  "heridaOperatoria": "Herida Operatoria",
   "HeridaOperatoria": "Herida Operatoria",
   "hip": "Cadera",
+  "historiaClinicaObstetricaParto": "Historia Clínica Obstétrica de Parto",
   "hivStatus": "Estado de VIH",
   "hivTestResults": "Resultados de VIH",
   "Hora de ingreso": "Hora de Ingreso",
@@ -296,6 +334,7 @@
   "immunizationPlan": "Esquema de Vacunación",
   "immunizationPlanBuilder": "Gestión del Esquema de Vacunación",
   "immunizationTabs": "Lista de pestañas de inmunización",
+  "inactive": "Inactive",
   "inactiveCases": "Casos Inactivos",
   "indicacionAcidoFolico": "Indicación Acido Fólico",
   "indicacionCalcio": "Indicación Calcio",
@@ -305,6 +344,7 @@
   "inPatientView": "Vista del Paciente Internado",
   "inPatientVisitMessage": "Encuentro de paciente internado encontrado para la visita actual {{visitType}}",
   "interpretation": "Interpretación",
+  "involuciónUterina": "Involución Uterina",
   "InvoluciónUterina": "Involución Uterina",
   "ipvOutcome": "Resultado de IPV",
   "ipvOutCome": "Resultado de IPV",
@@ -384,6 +424,7 @@
   "noActiveCasesToDisplay": "No hay datos de casos activos para mostrar.",
   "noBreastfeeding": "Does not want to breastfeed or suck",
   "noChartDataAvailable": "No hay datos de gráfico disponibles.",
+  "noConditionsToDisplay": "No conditions to display",
   "noContactToDisplay": "No hay datos de contacto para mostrar.",
   "noCurrentAppointments": "No hay citas programadas para hoy para este paciente.",
   "noData": "No hay datos disponibles",
@@ -398,6 +439,7 @@
   "noObservationsFound": "No se encontraron observaciones",
   "noPastAppointments": "No hay citas pasadas para mostrar para este paciente.",
   "nopeers": "No hay pares para mostrar para este educador de pares.",
+  "noResultsFor": "No results for",
   "noSchemas": "No hay esquemas disponibles",
   "nose": "Nariz",
   "noSearchItems": "No se encontraron vacunas",
@@ -406,16 +448,19 @@
   "notes": "Notas",
   "noUpcomingAppointments": "No se encontraron citas próximas",
   "noUpcomingAppointmentsForPatient": "No hay citas próximas para este paciente",
+  "Nueva Atención Postnatal": "Nueva Atención Postnatal",
   "Nueva Atención Prenatal": "Nueva Atención Prenatal",
   "numberOfPregnancies": "N° de embarazo",
   "numeroDeposiciones": "N° Deposiciones",
   "numeroMicciones": "N° Micciones",
   "numeroVomito": "N° Vómitos",
   "nutritionalStatus": "Nutritional Status",
+  "observación": "Observación",
   "observation": "Observación",
   "observations": "Observations",
   "of": "de",
   "onDate": "En la fecha",
+  "onsetDate": "Onset date",
   "operatingDoctor": "Médico Operador",
   "optional": "Opcional",
   "orientacion": "Orientación y consejería",
@@ -430,12 +475,20 @@
   "over90Days": "Mayor de 90 días",
   "oxygenSaturation": "Saturación de oxígeno",
   "pageNumber": "Número de página",
+  "paginationPageText_one": "of {{count}} pages",
+  "paginationPageText_many": "of {{count}} pages",
+  "paginationPageText_other": "of {{count}} pages",
   "paleness": "Severe palmar paleness",
   "parentInformation": "Información a los padres",
   "partnerStatus": "Estado VIH de la pareja",
+  "parto": "Parto",
+  "partoAborto": "Abortos",
+  "partoAlTermino": "Partos a término",
   "partograph": "Partograma",
   "partographData": "Componentes Vitales",
   "partographyDisplay": "Partograma mostrado",
+  "partoNacidoVivo": "Nacidos vivos",
+  "partoPrematuro": "Partos prematuros",
   "past": "Pasado",
   "patient": "Paciente",
   "patientFamilyTable": "Tabla de familia del paciente",
@@ -453,12 +506,15 @@
   "perinatalDataSaveError": "Error saving perinatal data",
   "perinatalRegister": "Perinatal Maternal Carnet",
   "Peso": "Peso (Kg)",
+  "pesoCorporal": "Peso Corporal (kg)",
   "pesoMadre": "Peso Madre (kg)",
   "phoneNumber": "Número de Teléfono",
   "phoneNumberPlaceholder": "Telefono",
   "physicalAssault": "1. ¿Alguna vez él/ella lo ha golpeado, pateado, abofeteado u ocasionado daño físico de otra forma?",
   "physicalExam": "Physical Examination",
+  "PielYMucosas": "Piel y Mucosas",
   "placeOfDelivery": "Lugar del Parto",
+  "Plan de Parto (Control/Visita/No se hizo/NA)": "Plan de Parto (Control/Visita/No se hizo/NA)",
   "planParto": "Plan de Parto",
   "pleaseFillField": "Por favor, complete al menos un campo",
   "pnsAproach": "Enfoque PNS",
@@ -477,7 +533,9 @@
   "prenatalVisits": "N° de atenciones prenatales",
   "presentación": "Presentación (C/P/NA)",
   "presionDiastolica": "Presión diastólica",
+  "presiónDiastólica": "Presión diastólica",
   "presionSistolica": "Presión Sistólica (mmHg)",
+  "presiónSistólica": "Presión sistólica",
   "pretermLabor": "Preterm Labor",
   "prev": "Anterior",
   "previousMonth": "Mes anterior",
@@ -488,8 +546,10 @@
   "proteinuriaGestacional": "Proteinuria gestacional",
   "provider": "Proveedor",
   "proximaCita": "Próxima cita",
+  "ProximaCita": "Próxima cita",
   "psychomotorDevelopment": "Psychomotor Development",
   "Puerperio": "Puerperio",
+  "puerperioInmediato": "Puerperio Inmediato",
   "PuerperioInmediato": "Puerperio Inmediato",
   "recommendedProcedure": "Procedimiento Recomendado",
   "recordLabourDetails": "Registrar detalles del parto",
@@ -517,28 +577,34 @@
   "respiratoryEffort": "Esfuerzo respiratorio",
   "respiratoryRate": "Frecuencia Resp.",
   "respiratoryRateAbbreviated": "F. Resp.",
+  "resumenPartoPostparto": "Resumen de Parto y Postparto",
   "riskFactors": "Risk Factors",
   "RlshipError": "Falla en la solicitud...",
   "RlshipErrorSubtitle": "Request Failed.......",
   "rubeola": "Rubéola",
   "saturacionOxigeno": "Saturación O₂ (%)",
   "save": "Guardar",
+  "saveAndClose": "Save & close",
   "savedRelationship": "Relación terminada exitosamente",
   "savedRlship": "Relación guardada con éxito",
   "saveError": "Error saving consultation",
   "saveReminder": "Recuerda guardar tus cambios",
   "saveRlship": "Guardar Relación",
   "saveSchema": "Guardar Esquema",
+  "saving": "Saving",
   "scheduleVaccination": "Programar Cita de Vacunación",
   "schemaBuilder": "Constructor de Esquema de Vacunación",
   "searchConcepts": "Buscar Conceptos",
+  "searchConditions": "Search conditions",
   "searchError": "Ocurrió un error al buscar.",
   "searchHelper": "Busca y selecciona una vacuna para agregar",
+  "searching": "Searching",
   "searchPatient": "Buscar Paciente",
   "searchSchemas": "Buscar Esquemas de Vacunación",
   "searchVaccination": "Buscar Vacunación",
   "searchVaccine": "Buscar Vacuna",
   "searchVaccines": "Buscar Vacunas",
+  "seeAll": "See all",
   "SegundaDosisAntitetanica": "2da dosis de vacuna antitetánica",
   "seizures": "Seizures",
   "selectConcept": "Seleccionar un Concepto",
@@ -551,6 +617,8 @@
   "service": "Servicio",
   "sex": "Sexo",
   "sexualAssault": "3. ¿Alguna vez él/ella le ha obligado a hacer algo sexual que le haya hecho sentir incómodo/a?",
+  "show": "Show",
+  "SignosYsíntomasPrincipales": "Signos y síntomas principales",
   "silvermanScore": "Puntuación de Silverman",
   "sinAtenciones": "Atenciones Prenatales",
   "single": "Single",
