actualizar descripciones de peso en el esquema de configuración y traducciones

--- a/translations/en.json
+++ b/translations/en.json
@@ -505,9 +505,9 @@
   "perinatalDataRecorded": "Perinatal Data Recorded",
   "perinatalDataSaveError": "Error saving perinatal data",
   "perinatalRegister": "Perinatal Maternal Carnet",
-  "Peso": "Weight (Kg)",
-  "pesoCorporal": "Peso Corporal (kg)",
-  "pesoMadre": "Mother's Weight (kg)",
+  "Peso": "Weight ",
+  "pesoCorporal": "Peso Corporal",
+  "pesoMadre": "Mother's Weight ",
   "phoneNumber": "Phone Number",
   "phoneNumberPlaceholder": "Phone number",
   "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise caused you physical harm?",
@@ -714,7 +714,7 @@
   "vomitGramsML": "Vomit Volume (g/mL)",
   "vomiting": "Vomits everything",
   "vomitoGramosML": "Vomit (g/mL)",
-  "weight": "Weight (kg)",
+  "weight": "Weight ",
   "wellChildCareTabs": "Lista de pestañas de cuidado del niño sano",
   "wellChildControls": "Well Child Controls",
   "widowed": "Widowed",
