--- a/translations/es.json
+++ b/translations/es.json
@@ -505,9 +505,9 @@
   "perinatalDataRecorded": "Perinatal Data Recorded",
   "perinatalDataSaveError": "Error saving perinatal data",
   "perinatalRegister": "Perinatal Maternal Carnet",
-  "Peso": "Peso (Kg)",
-  "pesoCorporal": "Peso Corporal (kg)",
-  "pesoMadre": "Peso Madre (kg)",
+  "Peso": "Peso",
+  "pesoCorporal": "Peso Corporal",
+  "pesoMadre": "Peso Madre",
   "phoneNumber": "Número de Teléfono",
   "phoneNumberPlaceholder": "Telefono",
   "physicalAssault": "1. ¿Alguna vez él/ella lo ha golpeado, pateado, abofeteado u ocasionado daño físico de otra forma?",
@@ -714,7 +714,7 @@
   "vomitGramsML": "Volumen de Vómito (g/mL)",
   "vomiting": "Vomits everything",
   "vomitoGramosML": "Vómito (g/mL)",
-  "weight": "Peso (kg)",
+  "weight": "Peso",
   "wellChildCareTabs": "Lista de pestañas de cuidado del niño sano",
   "wellChildControls": "Well Child Controls",
   "widowed": "Widowed",
